Improve for desktops

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Morgan Carter - Product Design
+title: Morgan Carter - Product Designer
 email: morgancarter1@gmail.com
 description: I’m a product designer based in Sydney. I turn complex ideas into intuitive, beautiful products.
 baseurl: "" # the subpath of your site, e.g. /blog/
