New homepage, make blog live

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Morgan Carter - Product Designer
-email: morgancarter1@gmail.com
+email: hello@morgancarter.com.au
 description: I’m a product designer based in Sydney. I turn complex ideas into intuitive, beautiful products.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
