--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Morgan Carter — Product Designer
 email: hello@morgancarter.com.au
-description: I’m a product designer based in Sydney. I turn complex ideas into intuitive, beautiful products.
+description: I’m a freelance digital product designer currently living in Sydney. I help startups and small businesses turn complex ideas into intuitive, beautiful products.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://morgancarter.com.au" # the base hostname & protocol for your site
 twitter_username: morgoe876
