add surgemaker case study, add canela fonts (temp), add scrollTo JS, remove masonry transition

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Morgan Carter — Product Designer
+title: Morgan Carter · Product Designer
 email: hello@morgancarter.com.au
 description: I’m a freelance digital product designer currently living in Sydney. I help startups and small businesses turn complex ideas into intuitive, beautiful products.
 baseurl: "" # the subpath of your site, e.g. /blog/
